--- a/.env
+++ b/.env
@@ -15,9 +15,9 @@ SINGLE_LOGIN=false
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=adminpanel
+DB_DATABASE=laravel_docker
 DB_USERNAME=root
-DB_PASSWORD=''
+DB_PASSWORD=toor
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
